# Tega-Michael-Brian-Project

./: .gitignore  Dockerfile  Dockerfile.airflow  Project_1_specs.md  README.md  docker-compose.yml  pyproject.toml  run_pipeline_test.sh
airflow/dags/: taxiops_dag.py
data/bronze/_spark_metadata/: .1.crc  .10.crc  .11.crc  .12.crc  .13.crc  .14.crc  .15.crc  .16.crc  .17.crc  .2.crc  .3.crc  .4.crc  .5.crc  .6.crc  .7.crc  .8.crc  .9.compact.crc  1  10  11  12  13  14  15  16  17  2  3  4  5  6  7  8  9.compact
data/bronze/pickup_date=2026-01-01/: .part-00000-4015b4c2-f0b6-4516-96ca-513f874262b8.c000.snappy.parquet.crc  .part-00000-58b0c91c-2ab5-45e1-8d0e-555a29b325d9.c000.snappy.parquet.crc  .part-00000-7a4b2f0a-31cc-48f5-adbb-3fc31a6fcbba.c000.snappy.parquet.crc  part-00000-4015b4c2-f0b6-4516-96ca-513f874262b8.c000.snappy.parquet  part-00000-58b0c91c-2ab5-45e1-8d0e-555a29b325d9.c000.snappy.parquet  part-00000-7a4b2f0a-31cc-48f5-adbb-3fc31a6fcbba.c000.snappy.parquet
data/bronze/pickup_date=2026-01-02/: .part-00000-40558a35-0f75-4d1e-a45a-5b6be6f8d707.c000.snappy.parquet.crc  .part-00000-ce0d122f-cefc-4f48-9b1e-23564efddc65.c000.snappy.parquet.crc  part-00000-40558a35-0f75-4d1e-a45a-5b6be6f8d707.c000.snappy.parquet  part-00000-ce0d122f-cefc-4f48-9b1e-23564efddc65.c000.snappy.parquet
data/bronze/pickup_date=2026-01-03/: .part-00000-72fcbc59-501d-462c-85bc-1d8c89be15fe.c000.snappy.parquet.crc  (+3 more)
src/producer/: faker_producer.py
src/streaming/: bronze_ingest.py  gold_aggregate.py  silver_transform.py
(+952 files in other folders)
